--- a/package.json
+++ b/package.json
@@ -7,7 +7,7 @@
   "scripts": {
     "start": "node server.js",
     "test": "node ace test",
-    "dev" : "adonis serve --dev"
+    "dev": "adonis serve --dev"
   },
   "keywords": [
     "adonisjs",
@@ -25,6 +25,7 @@
     "@adonisjs/framework": "^5.0.9",
     "@adonisjs/ignitor": "^2.0.8",
     "@adonisjs/lucid": "^6.1.3",
+    "@adonisjs/validator": "^5.0.6",
     "sqlite3": "^4.1.0"
   },
   "devDependencies": {},
