--- a/package.json
+++ b/package.json
@@ -25,10 +25,11 @@
     "@adonisjs/framework": "^5.0.9",
     "@adonisjs/ignitor": "^2.0.8",
     "@adonisjs/lucid": "^6.1.3",
-    "@adonisjs/validator": "^5.0.6",
+    "@adonisjs/validator": "^5.0.6"
+  },
+  "devDependencies": {
     "sqlite3": "^4.1.0"
   },
-  "devDependencies": {},
   "autoload": {
     "App": "./app"
   }
